--- a/src/Dotnet9.Web/Views/Category/Index.cshtml
+++ b/src/Dotnet9.Web/Views/Category/Index.cshtml
@@ -7,10 +7,10 @@
 <article>
 
     <div class="pics-list-box whitebg">
+        
         <div class="news-title">
-            <span class="hnav">
-                <h2>@Model.Name</h2>
-            </span>
+            <span class="weizhi">联系请关注微信公众号：Dotnet9</span>
+            <h2>@Model.Name</h2>
         </div>
         <ul>
             @if (Model.Items != null && Model.Items.Any())
