--- a/src/Dotnet9.Web/Views/Tag/Index.cshtml
+++ b/src/Dotnet9.Web/Views/Tag/Index.cshtml
@@ -23,20 +23,20 @@
 <article>
     @if (Model.Tags != null)
     {
-            @foreach (var tag in Model.Tags)
-            {
-                    <a href="/tag/@WebUtility.UrlEncode(tag.Name)" alt="@tag.Name" style="height: 30px; margin: 12px 5px; background-color: @(buttonsClasses[random.Next(buttonsClasses.Length)]);">
-                        @tag.Name (@tag.BlogPostCount)
-                    </a>
-            }
+        @foreach (var tag in Model.Tags)
+        {
+            <a href="/tag/@WebUtility.UrlEncode(tag.Name)" alt="@tag.Name" style="height: 30px; margin: 12px 5px; background-color: @(buttonsClasses[random.Next(buttonsClasses.Length)]);">
+                @tag.Name (@tag.BlogPostCount)
+            </a>
+        }
     }
     else
     {
         <div class="pics-list-box whitebg">
+            
             <div class="news-title">
-                <span class="hnav">
-                    <h2>@Model.TagName</h2>
-                </span>
+                <span class="weizhi">联系请关注微信公众号：Dotnet9</span>
+                <h2>@Model.TagName</h2>
             </div>
             <ul>
                 @if (Model.BlogPosts != null && Model.BlogPosts.Any())
