remove unused files;

--- a/src/Dotnet9.Web/wwwroot/css/blogpost.css
+++ b/src/Dotnet9.Web/wwwroot/css/blogpost.css
@@ -9,7 +9,7 @@
     color: #595959
 }
 
-    /* 段落，下方未标注标签参数均同此处
+/* 段落，下方未标注标签参数均同此处
  * 上边距 margin-top: 5px;
  * 下边距 margin-bottom: 5px;
  * 行高 line-height: 26px;
@@ -20,220 +20,220 @@
  * 字体大小 font-size: 16px;
  * 首行缩进 text-indent: 2em;
  */
-    #nice p {
-        margin: 1em 4px;
-    }
 
-    /* 一级标题 */
-    #nice h1 {
-        margin: 1.2em 0 1em;
-        padding: 0;
-        font-weight: bold;
-        color: #35b378;
-    }
+#nice p { margin: 1em 4px; }
 
-        /* 一级标题内容 */
-        #nice h1 .content {
-        }
+/* 一级标题 */
 
-        /* 一级标题修饰 请参考有实例的主题 */
-        #nice h1:after {
-        }
+#nice h1 {
+    margin: 1.2em 0 1em;
+    padding: 0;
+    font-weight: bold;
+    color: #35b378;
+}
 
-    /* 二级标题 */
-    #nice h2 {
-        bmin-height: 32px;
-        line-height: 32px;
-        border-bottom: solid 1px #000000;
-        color: #35b378;
-        display: inline-block;
-        border-bottom-width: 0px;
-        border-bottom-style: solid;
-        border-color: #35b378;
-        padding-top: 5px;
-        padding-right: 0.5em;
-        padding-left: 0.5em;
-        font-size: 23px;
-        margin: 1em 0 0rem 0;
-        padding: 0.5em 0;
-        text-align: leftt;
-        font-weight: bold;
-    }
+/* 一级标题内容 */
 
-        /* 二级标题内容 */
-        #nice h2 .content {
-        }
+#nice h1 .content { }
 
-        /* 二级标题修饰 请参考有实例的主题 */
-        #nice h2:after {
-        }
+/* 一级标题修饰 请参考有实例的主题 */
 
-    /* 三级标题 */
-    #nice h3 {
-        margin: 1.2em 0 1em;
-        padding: 0;
-        font-weight: bold;
-        color: #35b378;
-    }
+#nice h1:after { }
 
-        /* 三级标题内容 */
-        #nice h3 .content {
-        }
+/* 二级标题 */
 
-        /* 三级标题修饰 请参考有实例的主题 */
-        #nice h3:after {
-        }
+#nice h2 {
+    bmin-height: 32px;
+    line-height: 32px;
+    border-bottom: solid 1px #000000;
+    color: #35b378;
+    display: inline-block;
+    border-bottom-width: 0px;
+    border-bottom-style: solid;
+    border-color: #35b378;
+    padding-top: 5px;
+    padding-right: 0.5em;
+    padding-left: 0.5em;
+    font-size: 23px;
+    margin: 1em 0 0rem 0;
+    padding: 0.5em 0;
+    text-align: leftt;
+    font-weight: bold;
+}
 
-    /* 无序列表整体样式
+/* 二级标题内容 */
+
+#nice h2 .content { }
+
+/* 二级标题修饰 请参考有实例的主题 */
+
+#nice h2:after { }
+
+/* 三级标题 */
+
+#nice h3 {
+    margin: 1.2em 0 1em;
+    padding: 0;
+    font-weight: bold;
+    color: #35b378;
+}
+
+/* 三级标题内容 */
+
+#nice h3 .content { }
+
+/* 三级标题修饰 请参考有实例的主题 */
+
+#nice h3:after { }
+
+/* 无序列表整体样式
  * list-style-type: square|circle|disc;
  */
-    #nice ul {
-    }
 
-    /* 有序列表整体样式
+#nice ul { }
+
+/* 有序列表整体样式
  * list-style-type: upper-roman|lower-greek|lower-alpha;
  */
-    #nice ol {
-    }
 
-    /* 列表内容，不要设置li
+#nice ol { }
+
+/* 列表内容，不要设置li
  */
-    #nice li section {
-        margin: 10px 0;
-    }
 
-    /* 引用
+#nice li section { margin: 10px 0; }
+
+/* 引用
  * 左边缘颜色 border-left-color: black;
  * 背景色 background: gray;
  */
-    #nice .multiquote-1 {
-        margin: 10px 5px;
-        border-left: 3px solid #35b378;
-        border-right: 0px solid #35b378;
-        color: #616161;
-        quotes: none;
-        background: #FBF9FD
-    }
 
-        /* 引用文字 */
-        #nice .multiquote-1 p {
-        }
+#nice .multiquote-1 {
+    margin: 10px 5px;
+    border-left: 3px solid #35b378;
+    border-right: 0px solid #35b378;
+    color: #616161;
+    quotes: none;
+    background: #FBF9FD
+}
 
-    /* 链接 
+/* 引用文字 */
+
+#nice .multiquote-1 p { }
+
+/* 链接 
  * border-bottom: 1px solid #009688;
  */
-    #nice a {
-        color: #35b378;
-        border-bottom: 1px solid #35b378;
-    }
 
-    /* 加粗 */
-    #nice strong {
-        color: #35b378;
-    }
+#nice a {
+    color: #35b378;
+    border-bottom: 1px solid #35b378;
+}
 
-    /* 斜体 */
-    #nice em {
-    }
+/* 加粗 */
 
-        /* 加粗斜体 */
-        #nice em strong {
-        }
+#nice strong { color: #35b378; }
 
-    /* 删除线 */
-    #nice del {
-    }
+/* 斜体 */
 
-    /* 分隔线
+#nice em { }
+
+/* 加粗斜体 */
+
+#nice em strong { }
+
+/* 删除线 */
+
+#nice del { }
+
+/* 分隔线
  * 粗细、样式和颜色
  * border-top: 1px solid #3e3e3e;
  */
-    #nice hr {
-        border: 1px solid #35b378;
-        margin: 1.5em auto;
-    }
 
-    /* 图片
+#nice hr {
+    border: 1px solid #35b378;
+    margin: 1.5em auto;
+}
+
+/* 图片
  * 宽度 width: 80%;
  * 居中 margin: 0 auto;
  * 居左 margin: 0 0;
  */
-    #nice img {
-    }
 
-    /* 图片描述文字 */
-    #nice figcaption {
-    }
+#nice img { }
 
-    /* 行内代码 */
-    #nice p code, #nice li code {
-        color: #35b378;
-    }
+/* 图片描述文字 */
 
-    /* 非微信代码块
+#nice figcaption { }
+
+/* 行内代码 */
+
+#nice p code, #nice li code { color: #35b378; }
+
+/* 非微信代码块
  * 代码块不换行 display: -webkit-box !important;
  * 代码块换行 display: block;
  */
-    #nice pre code {
-    }
 
-    /*
+#nice pre code { }
+
+/*
  * 表格内的单元格
  * 字体大小 font-size: 16px;
  * 边框 border: 1px solid #ccc;
  * 内边距 padding: 5px 10px;
  */
-    #nice table tr th,
-    #nice table tr td {
-    }
 
-    /* 脚注文字 */
-    #nice .footnote-word {
-        color: #35b378;
-    }
+#nice table tr th,
+#nice table tr td { }
 
-    /* 脚注上标 */
-    #nice .footnote-ref {
-        color: #35b378;
-    }
+/* 脚注文字 */
 
-    /* "参考资料"四个字 
+#nice .footnote-word { color: #35b378; }
+
+/* 脚注上标 */
+
+#nice .footnote-ref { color: #35b378; }
+
+/* "参考资料"四个字 
  * 内容 content: "参考资料";
  */
-    #nice .footnotes-sep:before {
-    }
 
-    /* 参考资料编号 */
-    #nice .footnote-num {
-    }
+#nice .footnotes-sep:before { }
 
-    /* 参考资料文字 */
-    #nice .footnote-item p {
-    }
+/* 参考资料编号 */
 
-        /* 参考资料解释 */
-        #nice .footnote-item p em {
-        }
+#nice .footnote-num { }
 
-    /* 行间公式
+/* 参考资料文字 */
+
+#nice .footnote-item p { }
+
+/* 参考资料解释 */
+
+#nice .footnote-item p em { }
+
+/* 行间公式
  * 最大宽度 max-width: 300% !important;
  */
-    #nice .block-equation svg {
-    }
 
-    /* 行内公式
+#nice .block-equation svg { }
+
+/* 行内公式
  */
-    #nice .inline-equation svg {
-    }
+
+#nice .inline-equation svg { }
 
 
-h3 {
+#nice h3 {
     border-bottom: 1px solid #eee;
     margin-top: 50px;
     padding-bottom: 10px;
 }
 
-pre {
+#nice pre {
     background: #1E1E1E;
     color: #eee;
     overflow-x: auto;
@@ -243,10 +243,9 @@ pre {
     word-wrap: normal;
 }
 
-img, video, source {
-    max-width: 100%
+#nice img, video, source {
+    max-width: 100%;
+    display: inline;
 }
 
-pre > code {
-    white-space: pre;
-}
+#nice pre > code { white-space: pre; }
