fix mobile menu;

--- a/src/Dotnet9.Web/Views/Shared/_PublicLayout.cshtml
+++ b/src/Dotnet9.Web/Views/Shared/_PublicLayout.cshtml
@@ -160,16 +160,16 @@
 <div class="endmenu">
     <ul>
         <li>
-            <a href="http://menhu.ip3q.com/menhu_ip3q_default.html"><i class="iconfont icon-shouye"></i>首页</a>
+            <a href="/"><i class="iconfont icon-shouye"></i>首页</a>
         </li>
         <li>
-            <a href="phone-fenlei.html"><i class="iconfont icon-fenlei"></i>分类</a>
+            <a href="/cat/dotnet"><i class="iconfont icon-fenlei"></i>.NET</a>
         </li>
         <li>
-            <a href="phone-list.html"><i class="iconfont icon-navicon-wzgl"></i>所有</a>
+            <a href="/cat/database"><i class="iconfont icon-navicon-wzgl"></i>数据库</a>
         </li>
         <li>
-            <a href="http://menhu.ip3q.com/e/member/my/my.html"><i class="iconfont icon-My"></i>我的</a>
+            <a href="/about"><i class="iconfont icon-My"></i>关于</a>
         </li>
     </ul>
 </div>
