--- a/src/Dotnet9.Web/Views/Category/Index.cshtml
+++ b/src/Dotnet9.Web/Views/Category/Index.cshtml
@@ -13,9 +13,23 @@
             <h2>@Model.Name</h2>
         </div>
         <ul>
-            @if (Model.Items != null && Model.Items.Any())
+            @if (Model.Categories != null && Model.Categories.Any())
             {
-                @foreach (var item in Model.Items)
+                @foreach (var item in Model.Categories)
+                {
+                    <li>
+                        <a href="/cat/@item.Slug">
+                            <i>
+                                <img src="@item.Cover" alt="@item.Name">
+                            </i>
+                            <h2>@item.Name</h2>
+                        </a>
+                    </li>
+                }
+            }
+            @if (Model.BlogPosts != null && Model.BlogPosts.Any())
+            {
+                @foreach (var item in Model.BlogPosts)
                 {
                     <li>
                         <a href="/@item.CreateDate?.ToString("yyyy/MM")/@item.Slug">
