--- a/src/Dotnet9.Web/wwwroot/css/blogpost.css
+++ b/src/Dotnet9.Web/wwwroot/css/blogpost.css
@@ -226,9 +226,13 @@
 
 #nice .inline-equation svg { }
 
-#nice ul li { list-style: disc }
+#nice ul { margin-left: 30px; }
 
-#nice ol li { list-style: decimal }
+#nice ul li { list-style: disc; }
+
+#nice ol { margin-left: 30px; }
+
+#nice ol li { list-style: decimal; }
 
 #nice h3 {
     border-bottom: 1px solid #eee;
@@ -255,7 +259,6 @@
 
 #nice blockquote {
     animation: shadows 5s linear infinite alternate;
-    display: inline-block;
     margin: 0;
     padding: 1em;
     background: #f9f9f9;
@@ -273,12 +276,12 @@
 
 @keyframes shadows {
     0% {
-        box-shadow: 0 2px 4px -2px rgba(0,0,0,.25);
+        box-shadow: 0 2px 4px -2px rgba(0, 0, 0, .25);
         transform: scale(.97);
     }
 
     100% {
-        box-shadow: 0 0 4px 2px rgba(0,0,0,.25);
+        box-shadow: 0 0 4px 2px rgba(0, 0, 0, .25);
         transform: scale(1);
     }
 }
