--- a/src/Dotnet9.Web/Views/Shared/Components/RandomBlogPosts/Default.cshtml
+++ b/src/Dotnet9.Web/Views/Shared/Components/RandomBlogPosts/Default.cshtml
@@ -9,7 +9,7 @@
             {
                 <li>
                     <i></i>
-                    <a href="/@item.CreateDate?.ToString("yyyy/MM")/@item.Slug" title="@item.Title" target="_blank">@item.Title</a>
+                    <a href="/@item.CreateDate?.ToString("yyyy/MM")/@item.Slug" title="@item.Title">@item.Title</a>
                 </li>
             }
         }
