--- a/src/Dotnet9.Web/Views/Shared/Components/RecommendSidebar/Default.cshtml
+++ b/src/Dotnet9.Web/Views/Shared/Components/RecommendSidebar/Default.cshtml
@@ -16,7 +16,7 @@
                 @foreach (var item in blogPosts)
                 {
                     <li>
-                        <a href="/@item.CreateDate?.ToString("yyyy/MM")/@first.Slug" title="@item.Title" target="_blank">
+                        <a href="/@item.CreateDate?.ToString("yyyy/MM")/@first.Slug" title="@item.Title">
                             <i>
                                 <img src="@item.Cover" alt="@item.Title">
                             </i>
