--- a/src/Dotnet9.Web/Views/Shared/Components/WordBlogPosts4/Default.cshtml
+++ b/src/Dotnet9.Web/Views/Shared/Components/WordBlogPosts4/Default.cshtml
@@ -31,7 +31,7 @@
                                 {
                                     <li>
 
-                                        <a href="/@blogPost.CreateDate?.ToString("yyyy/MM")/@blogPost.Slug" target="_blank">
+                                        <a href="/@blogPost.CreateDate?.ToString("yyyy/MM")/@blogPost.Slug">
                                             <i>
                                                 <img src="@blogPost.Cover"
                                                      alt="@blogPost.Title">
