--- a/src/Dotnet9.Web/Views/Shared/Components/FriendLink/Default.cshtml
+++ b/src/Dotnet9.Web/Views/Shared/Components/FriendLink/Default.cshtml
@@ -10,7 +10,7 @@
             @foreach (var url in Model.FriendLinks)
             {
                 <li>
-                    <a href="@url.Url" alt="@url.Description" target="_blank">@url.Name</a>
+                    <a href="@url.Url" alt="@url.Description">@url.Name</a>
                 </li>
             }
         }
