--- a/src/Dotnet9.Web/Views/Tag/Index.cshtml
+++ b/src/Dotnet9.Web/Views/Tag/Index.cshtml
@@ -11,7 +11,7 @@
         "#66CDAA", "#00CED1", "#9F79EE", "#CD3333", "#FFC125", "#32CD32",
         "#00BFFF", "#68A2D5", "#FF69B4", "#DB7093", "#CD3278", "#607B8B"
     };
-    var random = new Random(DateTime.Now.Millisecond);
+    var random = new Random(DateTimeOffset.Now.Millisecond);
 }
 
 @section Headers {
