--- a/src/Dotnet9.Web/Views/Donation/Index.cshtml
+++ b/src/Dotnet9.Web/Views/Donation/Index.cshtml
@@ -13,16 +13,8 @@
     <script src="~/skin/menhu/js/picswiper.min.js"></script>
     <script src="~/skin/menhu/js/picview.js"></script>
 
-    <!--重置浏览器样式-->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.css">
-    <!--代码块主题-->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/prismjs@1.27.0/themes/prism-coy.min.css">
-    <!--工具栏插件-->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/prismjs@1.27.0/plugins/toolbar/prism-toolbar.min.css">
-    <!--行号插件-->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/prismjs@1.27.0/plugins/line-numbers/prism-line-numbers.min.css">
-    <!--Blog post-->
     <link rel="stylesheet" href="~/css/blogpost.css"/>
+    <link rel="stylesheet" href="~/css/prism.css"/>
 
 }
 
@@ -36,17 +28,5 @@
 </article>
 
 @section Scripts {
-
-    <!--prism核心js (用于渲染代码块)-->
-    <script src="https://cdn.jsdelivr.net/npm/prismjs@1.27.0/prism.min.js"></script>
-    <!--显示代码块行号-->
-    <script src="https://cdn.jsdelivr.net/npm/prismjs@1.27.0/plugins/line-numbers/prism-line-numbers.min.js"></script>
-    <!--工具栏(一些插件的前置依赖)-->
-    <script src="https://cdn.jsdelivr.net/npm/prismjs@1.27.0/plugins/toolbar/prism-toolbar.min.js"></script>
-    <!--代码块显示语言名称-->
-    <script src="https://cdn.jsdelivr.net/npm/prismjs@1.27.0/plugins/show-language/prism-show-language.min.js"></script>
-    <!--复制代码-->
-    <script src="https://cdn.jsdelivr.net/npm/prismjs@1.27.0/plugins/copy-to-clipboard/prism-copy-to-clipboard.min.js"></script>
-    <!--自动去cdn加载对应语言的代码高亮js-->
-    <script src="https://cdn.jsdelivr.net/npm/prismjs@1.27.0/plugins/autoloader/prism-autoloader.min.js"></script>
+    <script src="~/js/prism.js"></script>
 }
