--- a/src/Dotnet9.Web/Views/Shared/Components/LatestBlogPosts/Default.cshtml
+++ b/src/Dotnet9.Web/Views/Shared/Components/LatestBlogPosts/Default.cshtml
@@ -18,7 +18,7 @@
                 {
                     <li>
                         <i></i>
-                        <a href="/@item.CreateDate?.ToString("yyyy/MM")/@first.Slug" title="@item.Title">@item.Title</a>
+                        <a href="/@item.CreateDate?.ToString("yyyy/MM")/@item.Slug" title="@item.Title">@item.Title</a>
                     </li>
                 }
             }
