--- a/src/Dotnet9.Web/Views/Shared/Components/WordBlogPosts3/Default.cshtml
+++ b/src/Dotnet9.Web/Views/Shared/Components/WordBlogPosts3/Default.cshtml
@@ -39,6 +39,10 @@
                                                 <a href="/@blogPost.CreateDate?.ToString("yyyy/MM")/@blogPost.Slug">@blogPost.Title</a>
                                             </h2>
                                             <p>@blogPost.BriefDescription</p>
+                                            
+                                            <small style="text-align: left;">
+                                                <a style="display: inline;" href="/user/@(blogPost.Original ?? "沙漠尽头的狼")">@(blogPost.Original ?? "沙漠尽头的狼")</a> - @blogPost.CreateDate?.ToString("yyyy-MM-dd")
+                                            </small>
                                         </section>
                                     </li>
                                 }
