--- a/src/Dotnet9.Web/Views/Shared/Components/WordBlogPosts5/Default.cshtml
+++ b/src/Dotnet9.Web/Views/Shared/Components/WordBlogPosts5/Default.cshtml
@@ -47,6 +47,9 @@
                                 <p>
                                     @first.BriefDescription
                                 </p>
+                                <p>
+                                    <a href="/user/@(first.Original ?? "沙漠尽头的狼")">@(first.Original ?? "沙漠尽头的狼")</a> - @first.CreateDate?.ToString("yyyy-MM-dd")
+                                </p>
                                 <a href="/cat/@item.Value.Slug" class="btn-blue-border">阅读更多</a>
                             </div>
                         }
