update web title style;

--- a/src/Dotnet9.Web/Views/Shared/_PublicLayout.cshtml
+++ b/src/Dotnet9.Web/Views/Shared/_PublicLayout.cshtml
@@ -45,7 +45,7 @@
         <div class="logo">
             <a href="/">
                 <img src="~/favicon.ico">
-                <h2 class="logo-title">Dotnet9</h2>
+                <h2 class="logo-title">Dotnet<span>9</span></h2>
                 <p class="logo-text">一个专注于.NET技术的网站</p>
             </a>
         </div>
