--- a/src/Dotnet9.Web/wwwroot/skin/menhu/css/base.css
+++ b/src/Dotnet9.Web/wwwroot/skin/menhu/css/base.css
@@ -29,6 +29,7 @@ header { margin: 0; width: 100%; z-index: 9; transition: all 0.4s; background: #
 .logo { overflow: hidden }
 .logo img { width: 70px; float: left; margin-right: 10px }
 .logo-title { font-size: 28px; color: #1487f4; }
+.logo-title span {color: #ff8A00}
 .logo-title a{color: #1487f4; }
 .logo-text { margin-top: 5px; color: #888; }
 /*search*/
