--- a/src/Dotnet9.Web/Views/Shared/_PublicLayout.cshtml
+++ b/src/Dotnet9.Web/Views/Shared/_PublicLayout.cshtml
@@ -46,7 +46,7 @@
             <a href="/">
                 <img src="~/favicon.ico">
                 <h2 class="logo-title">Dotnet<span>9</span></h2>
-                <p class="logo-text">一个专注于.NET技术的网站</p>
+                <p class="logo-text">一个专注于.NET技术的网站 - 本站开发平台 <a href="https://dotnet.microsoft.com/" target="_blank" alt=".NET 7.0">.NET 7.0</a> </p>
             </a>
         </div>
     </div>
