--- a/src/Dotnet9.Web/Views/Shared/_PublicLayout.cshtml
+++ b/src/Dotnet9.Web/Views/Shared/_PublicLayout.cshtml
@@ -16,8 +16,8 @@
 
     @await RenderSectionAsync("Headers", false)
 
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8748951917303002"
-            crossorigin="anonymous"></script>
+    @*<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8748951917303002"
+            crossorigin="anonymous"></script>*@
 
     <script>
         var _hmt = _hmt || [];
